language/move-lang/tests/move_check/parser/unknown_ability_name_function_constraint.move
address 0x42 {
module M {
    // invalid constraint
    fun foo<T: blah>() {}
}
}
